fix mistakes & align text

--- a/style.css
+++ b/style.css
@@ -1,18 +1,51 @@
 body {
     font-family: sans-serif;
-    height: 100vh;
+    height: 100%;
     background-color: rgb(223, 235, 245);
 }
 body{
     display: flex;
+    flex-direction: column;
+}
+.header{
+    display: flex;
+    justify-content: space-between;
+    height: 60px;
+    width: 100%;
+    flex: 0;
+    
+}
+.main{
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+  
+}
+.footer{
+ justify-content: space-between;
+ height: 60px;
+ width: 100%;
+}
+.recipie{
+    width: 300px;
+    text-align: center;
+}
+.menu .recipie{
+    text-align: left;
+    color: rgb(26, 29, 28);
+
 }
 ul{
     list-style: none;
     margin: 0;
     padding: 0;
+    display: flex;
+}
+
+li{
+    padding: 5px;
 }
 a{
     text-decoration: none;
-    color: black;
-    
+    color: black;   
 }
